Clear focus after located event is not handled

This solves the issue:
After the user taps or clicks outside the folder name, the text should
be deactivated.

Bug: 815071
Change-Id: Ic8b77fb171d16c59198ccc1112d1b5dcb07a701d
Reviewed-on: https://chromium-review.googlesource.com/951718
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Weidong Guo <weidongg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#541170}
Former-commit-id: 1b537ed8d78856bf453e9d07a310876f748d5724